[project]
name = "assays"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.66.5",
    "pandas>=2.2.3",
    "ipykernel>=6.29.5",
    "numpy>=2.1.1",
    "fire>=0.6.0",
    "pyrootutils>=1.0.4",
    "openpyxl>=3.1.5",
]
